syntax = "proto3";

                 package creatureMovementOverride;
service CreatureMovementOverrideService {
 rpc createCreatureMovementOverride (CreatureMovementOverrideCreateInput) returns (CreatureMovementOverride) {}
rpc creatureMovementOverrides (findManyParams) returns (stream CreatureMovementOverride) {}
rpc creatureMovementOverride (CreatureMovementOverrideWhereUniqueInput) returns (CreatureMovementOverride) {}
rpc updateCreatureMovementOverride (CreatureMovementOverrideUpdateInput) returns (CreatureMovementOverride) {}
rpc deleteCreatureMovementOverride (CreatureMovementOverrideWhereUniqueInput) returns (CreatureMovementOverride) {} 
 }
message CreatureMovementOverrideCreateInput {
int32 chase = 1;
string createdAt = 2;
int32 flight = 3;
int32 ground = 4;
string id = 5;
int32 interactionPauseTimer = 6;
int32 random = 7;
int32 rooted = 8;
int32 spawnId = 9;
int32 swim = 10;
string updatedAt = 11;
};
message CreatureMovementOverride {
int32 chase = 1;
string createdAt = 2;
int32 flight = 3;
int32 ground = 4;
string id = 5;
int32 interactionPauseTimer = 6;
int32 random = 7;
int32 rooted = 8;
int32 spawnId = 9;
int32 swim = 10;
string updatedAt = 11;
};
message CreatureMovementOverrideWhereUniqueInput {
int32 chase = 1;
string createdAt = 2;
int32 flight = 3;
int32 ground = 4;
string id = 5;
int32 interactionPauseTimer = 6;
int32 random = 7;
int32 rooted = 8;
int32 spawnId = 9;
int32 swim = 10;
string updatedAt = 11;
};
message CreatureMovementOverrideUpdateInput {
int32 chase = 1;
string createdAt = 2;
int32 flight = 3;
int32 ground = 4;
string id = 5;
int32 interactionPauseTimer = 6;
int32 random = 7;
int32 rooted = 8;
int32 spawnId = 9;
int32 swim = 10;
string updatedAt = 11;
};
message findManyParams {

};